# Quantization-Aware-Training-for-Edge-AI

./: .gitignore  0762.py  DISCLAIMER.md  README.md  demo.py  pyproject.toml  requirements.txt  run.py  train.py
configs/: config.yaml
configs/comms/: mqtt_local.yaml
configs/device/: cpu.yaml
configs/quant/: int8_qat.yaml
src/export/: edge.py
src/models/: __init__.py  quantization.py
src/pipelines/: __init__.py  training.py
src/utils/: core.py
tests/: test_qat.py
